# any2any

./: LICENSE  NOTE.md  README.md  pyproject.toml
animations/: mixamo_idle.glb
animations/tripo/: a_man_falling.glb
docs/: MOTION_TRANSFER.md
examples/: transfer_animation.py
glb2glb/: __init__.py  joint_centric.py
glb2glb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
glb2glb/exporter/: __init__.py  animation_exporter.py  common.py  joint_centric_exporter.py  utils_internal.py
glb2glb/exporter/utils/: parse.py  repose.py
glb2glb/importer/: __init__.py  common.py  correct_motion_export.py  exceptions.py  joint_centric_importer.py  motion_transform.py
glb2glb/importer/glb/: __init__.py  accessor.py  parser.py
glb2glb/importer/mesh/: __init__.py  extractor.py  mesh.py
glb2glb/importer/mujoco/: __init__.py  generator.py
glb2glb/importer/skeleton/: __init__.py  bone.py  extractor.py
glb2glb/importer/utils/: __init__.py
glb2glb/pipeline/: __init__.py  motion_transfer.py
glb2glb/retargeter/: __init__.py  ik_based_retargeting.py
glb2glb/transfer/: __init__.py  animation_transfer.py  npy_to_glb.py
glb2glb/utils/: inspect_glb.py
glb2glb/visualizer/: __init__.py  mjviewer.py  utils.py  visualize_retargeting.py
output/: panda_with_myo_animation.glb
temporary/: a_man_falling_fixed.xml  a_man_falling_motion.npy  a_man_falling_motion_fixed.npy  check_orientation.py  import_glb_files.py  mixamo_idle.xml  mixamo_idle_motion.npy  myo_animation_fixed.xml  myo_animation_motion_fixed.npy  panda_running_motion.npy  source_motion.npy  target.xml
tests/: README.md  __init__.py  run_tests.py  test_exporter.py  test_importer.py  test_integration.py  test_pipeline.py  test_retargeter.py  test_transfer.py
tests/assets/: myo_animation.glb  panda_running.glb
